[package]
name = "prompter"
version = "0.5.0"
edition = "2021"
description = "Bundle your repository into a single Markdown document for LLM prompts."
license = "MIT"

[[bin]]
name = "prompter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
ignore = "0.4.23"
walkdir = "2.5.0"
globset = "0.4.15"
